# MaStR

./: .gitignore  README.md  pyproject.toml  ruff.toml
app/: api.py  enums.py
examples/: example_get_eeg_unit.py  example_get_player.py  example_get_players.py  example_get_unit.py  example_get_units.py  example_test_connection.py
